--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -409,6 +409,18 @@ input[type="range"]::-webkit-slider-thumb {
     overflow: hidden;
     position: relative;
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#gpu-canvas {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+    margin: auto;
 }
 
 #result-preview-img {
